<resources>
    <string name="app_name">App Covid Info</string>
    <string name="texto_about">Este aplicativo foi desenvolvido no contexto da disciplina de Pesquisa aplicada a Biotecnologia, e tem o objetivo de prover informações confiáveis para público não especializado sobre: Virologia; Covid-19; Cuidados e Prevenções; Tratamentos Farmacológicos e Dúvidas Frequentes. O aplicativo foi construído pelos alunos:\n \nJoalisson da Costa Moreira\n \nHorberlan Lucena de Brito\n \nLucas Matheus Fernandes de Almeida\n \nMartha Betânia Gonçalves Pereira\n \nMonalisa Mota Mercês</string>
    <string name="texto_care2">Conhecer os tipos de máscaras de proteção respiratória é o primeiro passo para a definição de qual é a mais adequada para cada situação. Como escolher um tipo de máscara para a proteção das vias respiratórias? Existem basicamente dois tipos de máscaras de proteção respiratória as: Máscaras cirúrgicas e as máscaras de proteção.</string>
    <string name="texto_mask">Quais são os tipos de máscaras de proteção? Existem duas normas aplicáveis às máscaras de proteção, uma européia e outra americana.\n \nClasse N: como a N95, N99 e N100, são indicadas para o tratamento do Covid-19, MERS, SARS e H1N1 em ambientes hospitalares;\n \nClasse R: máscaras que são também resistentes a óleo por até 8 horas, como a R95, R99 e também a R100;\n \nClasse P: máscaras que são absolutamente resistentes a óleos, tais como a p95, P99 e P100. Já as máscaras classificadas segundo a norma europeia, recebem o nome de PFF - Peças Faciais Filtrantes.\n \nPFF1: essa máscara é a menos filtrante dentre todas da classe PFF . Filtra até 80% de todos os aerossóis e tem, no máximo, 22% de fuga deles para o interior.\n \nPFF2: filtra no mínimo 94% e tem, no máximo, 8% de fuga para o interior. É utilizada em ambiente hospitalar para prevenir profissionais do contágio da Covid-19, SARS e Tuberculose, dentre outras.\n \nPFF3: filtra, no mínimo, 99% de todas as particulas e tem fuga para o interior de no máximo 2%. É a máscara protetora mais potente que podemos ter acesso. Ela é utilizada por trabalhadores que precisam ser protegidos de partículas como o amianto.</string>
    <string name="texto_recomendacoes">Casos suspeitos, confirmados e acompanhantes devem utilizar máscara de proteção cirúrgica;\n \n# Profissionais de saúde de saúde devem utilizar máscaras de proteção cirúrgica durante o atendimento e máscaras de proteção respiratória N95 ou PFF2 durante procedimentos;\n \nQual a diferença entre os tipos de máscara de proteção respiratória PFF1. PFF2 e PFF3?\n \nO que difere é o grau de eficiência em relação à filtragem do ar.\n Graus de filtragem:\n PFF1: filtra 80% no mínimo;\n PFF2: filtra 94% no mínimo;\n PFF3: filtra 99% no mínimo;\n</string>
    <string name="texto_covid">O COVID-19 é uma doença causada pelo coronavírus SARS-CoV-2, que apresenta um quadro clínico que varia de infecções assintomáticas a quadros respiratórios e inflamatórios graves.\n \nDe acordo com a Organização Mundial de Saúde (OMS), a maioria dos pacientes infectados (cerca de 80%) podem ser assintomáticos, cerca de 20% dos casos podem requerer atendimento hospitalar por apresentarem dificuldade respiratória e desses casos aproximadamente 5% podem necessitar de suporte para o tratamento de insuficiência respiratória (suporte ventilatório).</string>
    <string name="texto_covid2">Como o coronavírus infecta as células do hospedeiro?\n \nAnálises estruturais do novo coronavírus, indicam que suas proteínas estruturais incluem: \nproteína spike, proteína de envelope, proteína de membrana e fosfoproteína nucleocapsídica.\n \nJá no corpo humano, há uma proteína chamada de ECA 2 (enzima conversora de angiotensina 2), que é uma proteína transmembrana presente em diversas células do corpo, como o epitélio do sistema respiratória. Essa enzima faz parte do sistema renina angiotensina aldosterona, responsável pelo controle da pressão arterial.\n \nA proteína spike presente na superfície do SarsCov-2, interage com a proteína receptora ECA-2 que facilita a entrada do vírus na célula provocando a infecção. A partir desse momento, o vírus se “apodera” do maquinário celular e “força” a célula a fazer novas cópias do vírus que infectarão outras células e outros indivíduos.\n \nA inibição da expressão da proteína ECA 2 já foi considerada como uma possibilidade que ajudaria a combater a infecção. Mas, apesar de a ECA 2 ser a porta de entrada do vírus nas células, já foi demonstrado em outras pesquisas que a ação da ECA 2 tem efeito protetor contra danos aos pulmões causados por infecções virais.\n \nOs estudos também revelaram que a diminuição nos níveis dessa proteína pode causar ainda mais danos aos pulmões do indivíduo infectado. Uma diminuição na expressão de ECA 2 pode levar ao aumento da permeabilidade vascular, provocando edema ou inchaço pulmonar e acúmulo de neutrófilos com aumento da resposta inflamatória que levaria a uma piora na função pulmonar.\n</string>
    <string name="texto_cure1">É uma combinação que está presente em cerca de 230 estudos clínicos no mundo inteiro. As funções da Hidroxicloroquina é de diminuição da carga viral, maximizar as funções do Zinco, promover imunomodulação controlando o processo inflamatório e a Azitromicina é usada para impedir infecções oportunistas por bactérias. Efeitos adversos e sua interação com a Azitromicina (macrolídeo) pode aumentar a probabilidade de possíveis problemas de disfunção cardíaca em pacientes em estado grave.</string>
    <string name="texto_curee">É uma droga anti-parasitária, teve efetividade contra o vírus SARS-CoV-2 num estudo in vitro que foi feito pela Universidade de Monash, na Austrália. Ela impede que o vírus chegue ao núcleo celular, por meio da inibição da IMPORTINA, assim, impedindo a replicação e transcrição de proteínas essenciais para o vírus se proliferar. Está sendo utilizada em diversos países pelo mundo, testes clínicos estão em andamento para confirmar a efetividade do medicamento em pacientes com a COVID-19</string>
    <string name="texto_cure3">É um corticóide, tem função antiinflamatória e imunossupressora ajudando O medicamento está sendo utilizado amplamente em pacientes graves para a diminuição das complicações causadas pela Síndrome Respiratória Aguda Grave (SRAG) que está relacionada com a tempestade de citocinas causada pela COVID-19</string>
    <string name="texto_cure4">Essa é a vacina da AstraZeneca junto com a Universidade de Oxford, forte candidata a ser a mais efetiva vacina contra a COVID-19. Haverá testes em voluntários brasileiros, em parceria com a Universidade Federal de São Paulo (Unifesp).</string>
    <string name="texto_virus">Os vírus são pequenos pacotes de material genético que evoluíram como parasitas na maquinaria reprodutiva e biossintética das células hospedeiras. Embora eles próprios não sejam células vivas, podem frequentemente servir como vetores para transferência genética.\n \nUm vírus irá replicar em uma célula, emergir dela com um envoltório protetor e, então, penetrará e infectará outra célula, que pode ser da mesma espécie ou de espécie diferente.</string>
    <string name="texto_virus2">São extremamente pequenos, com tamanhos que variam de 20 até aproximadamente 400 nm (nanômetro, equivalente a 1 mm divido por 1.000.000). Exceto pelos poxvírus e mimivírus (subtipos de vírus), os vírus não podem ser visualizados pela microscopia óptica\n \nOs componentes básicos do vírus incluem um genoma (consistindo em ácido nucleico; DNA ou RNA) e uma capa proteica (capsídeo). Uma membrana ou envoltório está presente em alguns vírus (que o obtêm quando são liberados por brotamento através de membranas das células do hospedeiro). Alguns vírus codificam e carregam suas próprias enzimas necessárias para a replicação do seu genoma.\n</string>
    <string name="texto_ciclo1">No ciclo lítico, o vírus invade a célula hospedeira e interrompe as suas funções, graças a presença do ácido nucléico do vírus (DNA ou RNA). Somado a isso, de maneira concomitante, ao mesmo tempo que o DNA ou RNA é replicado, este ainda comanda a síntese das proteínas, que ao final do processo, irão compor o capsídeo.\n \nDessa maneira, são produzidos novos vírus. Neste processo, ocorre o que conhecemos como lise, que é quando a célula infectada se rompe, fazendo com que os novos bacteriófagos sejam liberados.\n \nOs vírus que se reproduzem desta maneira, acabam gerando sintomas que aparecem imediatamente após o início do processo.</string>
    <string name="texto_ciclo2">No caso do ciclo lisogênico, o processo se modifica um pouco. Neste caso, o vírus invade a célula hospedeira (ou bactéria em alguns casos), e incorpora seu DNA ao da célula infectada.\n         \nOu seja, o DNA do vírus passa a fazer parte do DNA da célula infectada. Com isso, uma vez que a célula foi infectada, ela continua com seu processo natural de reprodução celular. Mas agora ela está com o DNA modificado, contendo partes do vírus em questão.\n         \nDurante o processo de divisão desta célula, há um processo de duplicação deste DNA modificado. Dessa forma, uma célula que foi infectada, começará a reproduzir o vírus, sempre que esta passar por um processo de mitose. Com isso, todas as células reproduzidas por ela, já terão em seu código genético, o vírus em questão. A diferença, no que se refere aos sintomas, no caso do ciclo lisogênico, é que estes podem demorar para se tornarem perceptíveis e notados.\n         \nNo geral, salvo algumas exceções, as doenças que são oriundas de vírus com reprodução através do ciclo lisogênico, não possuem uma cura. Isso, por que não há mais como isolar o vírus e eliminá-lo.\n         \nÉ importante perceber que não necessariamente, os vírus que se reproduzem através do ciclo lítico, são menos prejudiciais do que os que se reproduzem através do ciclo lisogênico.\n         \nTudo vai depender do vírus e da forma como ele afeta o funcionamento fisiológico do organismo. Há vírus mais e menos potentes no que se refere aos impactos sobre a saúde.\n         \nPor isso, é fundamental que você, como profissional, saiba os principais exemplos de vírus que se reproduzem por meio de cada um destes ciclos.</string>
</resources>